<resources>
    <string name="app_name">SiChef(beta)</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="sing_in">Log-In</string>
    <string name="user_new">Soy Nuevo</string>
    <string name="password">Password</string>
    <string name="user_email">User Email</string>
    <string name="am_am">ÑAM ÑAM</string>
    <string name="logout">LogOut</string>
    <string name="titulo">Titulo</string>
    <string name="categoria">Categoria</string>
    <string name="como_se_prepara">Como se prepara:</string>
    <string name="guardar">Guardar</string>
    <string name="ingredientes">Ingredientes:</string>
    <string name="que_necesitaremos">Que necesitaremos</string>
    <string name="cuantos_comensales">Cuantos comensales</string>
    <string name="como_se_llama_la_receta">Dale nombre a tu obra</string>
    <string name="tu_obra_maestra">Tu obra maestra:</string>
    <string name="titulo_de_la_receta">Titulo de la Receta:</string>
    <string name="comensales_mesa">Comensales a la mesa:</string>
    <string name="los_ingredientes">Los ingredientes:</string>
    <string name="preparaci_n">Preparación:</string>
    <string name="autor_de_la_receta">Chef de la receta:</string>
    <string name="info">Yop</string>
    <string name="nick">Tu Chef nick</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="libro_de_recetas">Libro de Recetas</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search">Search</string>
    <string name="para_que_coman">Para que coman:</string>
    <string name="molaria_poner_un_rating">Molaria poner un rating</string>
    <string name="para_las_futuras_imagenes">Para las futuras imagenes</string>
    <string name="observaciones">Observaciones:</string>
    <string name="cancelar">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Detalle</string>
    <string name="tab_text_2">Comentarios</string>
    <string name="title_activity_receta_local">RecetaLocalActivity</string>
    <string name="borrar">BORRAR</string>
    <string name="title_activity_detail">RecetaDetailActivity</string>
</resources>
