<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.nuevareceta.NewRecetaActivity">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
        <TextView
                android:text="@string/tu_obra_maestra"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/titulo_de_la_receta"
                android:ems="10"
                android:id="@+id/etNewTitle"
                android:textColorLink="#FF5722"
                android:textColorHighlight="#FF5722"
                android:textCursorDrawable="@color/colorBase"/>
        <TextView
                android:text="@string/comensales_mesa"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etNewComens"
                android:textColorLink="#FF5722"
                android:textColorHighlight="#FF5722"
                android:textCursorDrawable="@color/colorBase"/>
        <TextView
                android:text="@string/ingredientes"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/etNewIngred"
                android:textColorLink="#FF5722"
                android:textColorHighlight="#FF5722"
                android:textCursorDrawable="@color/colorBase"/>
        <TextView
                android:textSize="20sp"
                android:text="@string/preparaci_n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/etNewPrep"
                android:textColorLink="#FF5722"
                android:textColorHighlight="#FF5722"
                android:textCursorDrawable="@color/colorBase"/>
        <TextView
                android:text="@string/observaciones"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView8"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etNewObser"
                android:textColorHighlight="#FF5722"
                android:textColorLink="#FF5722"
                android:textCursorDrawable="@color/colorBase"/>
        <TextView
                android:text="@string/para_las_futuras_imagenes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView7"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" android:gravity="center">
            <Button
                    android:text="@string/guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSaveNewReceta"
                    android:background="@color/colorback"
                    android:layout_marginHorizontal="20dp"/>
            <Button
                    android:text="@string/cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btncancel"
                    android:background="#E04D4D"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>