<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="14dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true"
        android:onClick="onClickReceta">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBase"
                android:id="@+id/viewBackground">

            <ImageView
                    android:id="@+id/delete_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/papelera" card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="352dp"
                    android:layout_marginTop="68dp" android:layout_marginStart="352dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/delete_icon"
                    android:text="@string/borrar"
                    android:textColor="#fff"
                    android:textSize="13sp"
                    card_view:layout_constraintEnd_toStartOf="@+id/delete_icon" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    card_view:layout_constraintTop_toTopOf="@+id/delete_icon"
                    android:layout_toStartOf="@id/delete_icon"/>
        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorwhite"
                android:id="@+id/viewForeground">

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp" card_view:srcCompat="@drawable/chef_hat_color"
                    android:id="@+id/imageView3" card_view:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" card_view:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    card_view:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
            <TextView
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitleLocal" card_view:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintStart_toEndOf="@+id/imageView3"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp" android:textColor="#FF5722" android:textStyle="bold"/>
            <TextView
                    android:text="@string/para_que_coman"
                    android:textSize="18sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvcomensales"
                    card_view:layout_constraintTop_toBottomOf="@+id/tvTitleLocal" android:layout_marginTop="16dp"
                    card_view:layout_constraintStart_toEndOf="@+id/imageView3" android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp" card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>
            <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvNumComensalesLocal"
                    card_view:layout_constraintBottom_toTopOf="@+id/tvRating"
                    card_view:layout_constraintTop_toBottomOf="@+id/tvcomensales"
                    card_view:layout_constraintStart_toEndOf="@+id/imageView3"
                    card_view:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/molaria_poner_un_rating"
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRating"
                    card_view:layout_constraintTop_toBottomOf="@+id/tvcomensales" android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp" card_view:layout_constraintStart_toEndOf="@+id/imageView3"
                    card_view:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp" card_view:layout_constraintHorizontal_bias="0.0"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintVertical_bias="0.8"/>
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>